--- a/zakupy_C2.html
+++ b/zakupy_C2.html
@@ -2,67 +2,106 @@
 <html lang="pl">
 <head>
 <meta charset="utf-8"/>
-<title>Test pamięci — Zakupy i usługi – C2</title>
+<title>Zakupy i usługi – C2</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <style>
-body { font-family: "Segoe UI", Roboto, -apple-system, "Helvetica Neue", Arial, sans-serif; max-width:980px; margin:20px auto; padding:0 18px; color:#111; }
-.level-header { background:#b91c1c; color:#fff; padding:14px 20px; border-radius:6px; text-align:center; font-weight:700; font-size:1.1rem; margin-bottom:14px; }
-h1 { font-size:1.6rem; margin:6px 0 8px 0; }
-.muted { color:#555; }
-textarea { width:100%; min-height:140px; padding:12px; box-sizing:border-box; font-family:monospace; font-size:0.95rem; border:1px solid #ccc; border-radius:6px; }
-.controls { display:flex; gap:8px; align-items:center; margin-top:10px; flex-wrap:wrap; }
-button { background:#fff; border:1px solid #d1d5db; padding:8px 12px; border-radius:8px; cursor:pointer; }
-.small { color:#444; }
-table { width:100%; border-collapse:collapse; margin-top:12px; }
-th, td { padding:12px 10px; border:1px solid #eee; text-align:left; }
-th { background:#fafafa; font-weight:700; }
-.good { background:#e6f9e6; }
-.bad { background:#ffecec; }
+  body { font-family: "Segoe UI", Roboto, -apple-system, "Helvetica Neue", Arial, sans-serif; max-width:980px; margin:20px auto; padding:0 18px; color:#111; background:#f6f6f6; }
+  .level-header { background:#b91c1c; color:#fff; padding:14px 20px; border-radius:6px; text-align:center; font-weight:700; font-size:1.1rem; margin-bottom:14px; }
+  .card { background:#fff; border-radius:10px; padding:18px; box-shadow:0 6px 18px rgba(0,0,0,0.06); }
+  h1 { font-size:1.6rem; margin:6px 0 8px 0; }
+  .muted { color:#555; }
+  textarea { width:100%; min-height:140px; padding:12px; box-sizing:border-box; font-family:monospace; font-size:0.95rem; border:1px solid #ccc; border-radius:6px; }
+  .controls { display:flex; gap:8px; align-items:center; margin-top:10px; flex-wrap:wrap; }
+  button { background:#fff; border:1px solid #d1d5db; padding:8px 12px; border-radius:8px; cursor:pointer; }
+  button.primary { background:#10b981; color:white; border-color:#10b981; }
+  button.info { background:#3b82f6; color:white; border-color:#3b82f6; }
+  button.gray { background:#fff; color:#111; }
+  label.inline { display:inline-flex; align-items:center; gap:8px; font-size:0.95rem; color:#333; }
+  .small { color:#444; margin-left:auto; }
+  table { width:100%; border-collapse:collapse; margin-top:12px; background:#fff; }
+  th, td { padding:12px 10px; border:1px solid #eef2f7; text-align:left; vertical-align:middle; }
+  th { background:#fafafa; font-weight:700; }
+  .good { background:#e6f9e6; }
+  .bad { background:#fff0f0; }
+  @media (max-width:640px){
+    .controls{flex-direction:column; align-items:stretch;}
+    .small{margin-left:0;}
+  }
 </style>
 </head>
 <body>
-<div class="level-header">Zakupy i usługi – C2</div>
-<h1>Test pamięci — pary PL-EN</h1>
-<p class="muted">Wpisz pary słów w formacie: <strong>polskie słowo - angielskie słowo</strong>.<br/>Możesz podać kilka par, oddzielając je <strong>przecinkami</strong> lub <strong>nowymi liniami</strong>.<br/>(Uwaga: średnik <code>;</code> w środku słowa oznacza wiele tłumaczeń — nie oddziela par!)</p>
+  <div class="level-header">Zakupy i usługi – C2</div>
 
-<textarea id="answers" placeholder="Przykład: polskie - angielskie"></textarea>
-<div class="controls">
-  <button id="checkBtn">Sprawdź</button>
-  <button id="hintBtn">Podpowiedź</button>
-  <button id="clearBtn">Wyczyść</button>
-  <label style="display:inline-flex;align-items:center;gap:6px;"><input type="checkbox" id="hideDone"> Ukryj odgadnięte słowa</label>
-  <div class="small">Trafione: <span id="counter">0</span> / <span id="total">0</span></div>
-</div>
+  <div class="card" role="main">
+    <h1>Test pamięci — pary PL-EN</h1>
+    <p class="muted">
+      Wpisz pary słów w formacie: <strong>polskie słowo - angielskie słowo</strong>.<br>
+      Możesz podać kilka par, oddzielając je <strong>przecinkami</strong> lub <strong>nowymi liniami</strong>.<br>
+      (Uwaga: <strong>średnik „;”</strong> w środku słowa oznacza wiele tłumaczeń — nie oddziela par!)
+    </p>
 
-<div id="results"></div>
+    <textarea id="answers" placeholder="Przykład: polskie - angielskie"></textarea>
+
+    <div class="controls" style="margin-top:10px;">
+      <button id="hintBtn" class="info">Podpowiedź</button>
+      <button id="checkBtn" class="primary">Sprawdź</button>
+      <button id="clearBtn" class="gray">Wyczyść</button>
+      <label class="inline"><input type="checkbox" id="hideDone"> Ukryj odgadnięte słowa</label>
+      <div class="small">Trafione: <span id="counter">0</span> / <span id="total">0</span></div>
+    </div>
+
+    <div id="results" style="margin-top:14px;"></div>
+  </div>
 
 <script>
-const ITEMS = [{"pl": "wprowadzać na rynek", "en": "to launch"}, {"pl": "notka reklamowa (na okładce lub obwolucie książki)", "en": "a blurb"}, {"pl": "nęcić; wabić", "en": "to lure"}, {"pl": "przynęta; lep", "en": "a lure"}, {"pl": "prestiż", "en": "prestige"}, {"pl": "prestiżowy", "en": "prestigious"}, {"pl": "zdzierstwo", "en": "a rip-off"}, {"pl": "ze skazą; z wadami", "en": "flawed"}, {"pl": "błędne rozumowanie", "en": "flawed reasoning"}];
+// ======== Pełna lista dla "Zakupy i usługi – C2" ========
+const ITEMS = [
+  {pl: "wprowadzać na rynek", en: "to launch"},
+  {pl: "notka reklamowa (na okładce lub obwolucie książki)", en: "a blurb"},
+  {pl: "nęcić; wabić", en: "to lure"},
+  {pl: "przynęta; lep", en: "a lure"},
+  {pl: "prestiż", en: "prestige"},
+  {pl: "prestiżowy", en: "prestigious"},
+  {pl: "zdzierstwo", en: "a rip-off"},
+  {pl: "ze skazą; z wadami", en: "flawed"},
+  {pl: "błędne rozumowanie", en: "flawed reasoning"}
+];
+
 let matched = [];
 let order = ITEMS.map((_,i)=>i);
 let showAll = false;
-let showHintsMode = false;
+
 document.getElementById('total').textContent = ITEMS.length;
 
-function normalize(s){ return String(s||'').trim().toLowerCase().replace(/[.,:()"]/g,'').normalize('NFKD').replace(/[̀-ͯ]/g,''); }
+// Normalizacja (uwzględnia różne typy myślników + non-breaking hyphen)
+function normalize(s){
+  return String(s||'')
+    .trim()
+    .toLowerCase()
+    .replace(/[.,:()"]/g,'') 
+    .replace(/[\u2010-\u2015\u2212\uFE58\uFE63\uFF0D\u2011]/g, '-') // wszystkie rodzaje myślników -> zwykły '-'
+    .normalize('NFKD')
+    .replace(/\s+/g,' ')
+    .replace(/^[\s\.,:;]+|[\s\.,:;]+$/g,'');
+}
 
+// Render tabeli (zgodny z Twoim stylem)
 function render(){
   const results = document.getElementById('results');
   results.innerHTML = '';
   const table = document.createElement('table');
-  table.innerHTML = '<thead><tr><th>#</th><th>Angielski</th><th>Polski</th></tr></thead>';
+  table.innerHTML = '<thead><tr><th style="width:48px">#</th><th style="width:45%">Angielski</th><th>Polski</th></tr></thead>';
   const tbody = document.createElement('tbody');
   let visibleIndex = 0;
-  for(const origIdx of order){
-    if(document.getElementById('hideDone') && matched.includes(origIdx) && document.getElementById('hideDone').checked) continue;
+  for (const origIdx of order){
     const it = ITEMS[origIdx];
     const isMatched = matched.includes(origIdx);
+    if (document.getElementById('hideDone').checked && isMatched) continue;
     const tr = document.createElement('tr');
-    if(isMatched) tr.classList.add('good');
-    else if(showAll) tr.classList.add('bad');
-    const en = (isMatched || showAll) ? it.en : '— — —';
-    const pl = it.pl;
-    tr.innerHTML = `<td>${visibleIndex+1}</td><td>${en}</td><td>${pl}</td>`;
+    if (isMatched) tr.classList.add('good');
+    else if (showAll) tr.classList.add('bad');
+    const enText = (isMatched || showAll) ? it.en : '— — —';
+    tr.innerHTML = `<td>${visibleIndex+1}</td><td>${escapeHtml(enText)}</td><td>${escapeHtml(it.pl)}</td>`;
     tbody.appendChild(tr);
     visibleIndex++;
   }
@@ -72,38 +111,93 @@ function render(){
   document.getElementById('total').textContent = ITEMS.length;
 }
 
+function escapeHtml(s){ return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); }
+
+// Robustne rozdzielanie par: separator musi mieć co najmniej jedną spację po którejkolwiek stronie
+// (zapobiega rozłamywaniu 'a rip-off' -> 'a rip' + 'off')
+const dashChars = '\u2010-\u2015\u2212\uFE58\uFE63\uFF0D\u2011\\-';
+const reLeftSpace  = new RegExp('^(.+?)\\s+['+dashChars+']\\s*(.+)$');
+const reRightSpace = new RegExp('^(.+?)\\s*['+dashChars+']\\s+(.+)$');
+
 function autoCheck(){
   const raw = document.getElementById('answers').value;
   const entries = raw.split(/[\n,]+/).map(s=>s.trim()).filter(Boolean);
-  const newlyMatched = [];
-  for(const e of entries){
-    const parts = e.split('-');
-    if(parts.length!==2) continue;
-    const left = normalize(parts[0]); const right = normalize(parts[1]);
-    for(const idx of order){
-      if(matched.includes(idx)) continue;
+  const newly = [];
+  for (const e of entries){
+    const m = e.match(reLeftSpace) || e.match(reRightSpace);
+    if (!m) continue; // brak separatora z odstępem -> ignorujemy (zapobiega złemu rozbiciu)
+    const leftRaw = m[1].trim();
+    const rightRaw = m[2].trim();
+    const left = normalize(leftRaw);
+    const right = normalize(rightRaw);
+    for (const idx of order){
+      if (matched.includes(idx)) continue;
       const it = ITEMS[idx];
-      const enN = normalize(it.en); const plN = normalize(it.pl);
-      if((plN===left && enN===right) || (plN===right && enN===left)){
-        newlyMatched.push(idx);
+      const enN = normalize(it.en);
+      const plN = normalize(it.pl);
+      if ((plN === left && enN === right) || (plN === right && enN === left)){
+        newly.push(idx);
         break;
       }
     }
   }
-  if(newlyMatched.length){
-    for(const idx of newlyMatched){
-      order = order.filter(x=>x!==idx); order.push(idx); matched.push(idx);
+  if (newly.length){
+    for (const idx of newly){
+      order = order.filter(x=>x!==idx);
+      order.push(idx);
+      matched.push(idx);
     }
+    render();
   }
-  render();
 }
 
-document.getElementById('answers').addEventListener('input', ()=>{ showAll=false; showHintsMode=false; autoCheck(); });
-document.getElementById('checkBtn').addEventListener('click', ()=>{ showAll=true; showHintsMode=false; render(); const tbody=document.querySelector('#results tbody'); let rowIdx=0; for(const origIdx of order){ if(document.getElementById('hideDone') && matched.includes(origIdx) && document.getElementById('hideDone').checked){ continue; } const tr = tbody.children[rowIdx]; tr.children[1].textContent = ITEMS[origIdx].en; rowIdx++; } });
-document.getElementById('hintBtn').addEventListener('click', ()=>{ showHintsMode=true; showAll=false; render(); const tbody=document.querySelector('#results tbody'); if(!tbody) return; let rowIdx=0; for(const origIdx of order){ if(document.getElementById('hideDone') && matched.includes(origIdx) && document.getElementById('hideDone').checked){ continue; } const tr = tbody.children[rowIdx]; if(!matched.includes(origIdx)){ tr.children[1].textContent = ITEMS[origIdx].en; } rowIdx++; } });
-document.getElementById('clearBtn').addEventListener('click', ()=>{ document.getElementById('answers').value=''; matched=[]; order=ITEMS.map((_,i)=>i); showAll=false; showHintsMode=false; document.getElementById('hideDone').checked=false; render(); });
+// Podpowiedź: pokazuje angielskie tłumaczenia dla nieodgadniętych
+document.getElementById('hintBtn').addEventListener('click', ()=>{
+  showAll = false;
+  render();
+  const tbody = document.querySelector('#results tbody');
+  if (!tbody) return;
+  let r = 0;
+  for (const origIdx of order){
+    if (document.getElementById('hideDone').checked && matched.includes(origIdx)) continue;
+    const tr = tbody.children[r];
+    if (!matched.includes(origIdx)) tr.children[1].textContent = ITEMS[origIdx].en;
+    r++;
+  }
+});
+
+// Sprawdź: ujawnij wszystkie i podświetl nieodgadnięte
+document.getElementById('checkBtn').addEventListener('click', ()=>{
+  showAll = true;
+  render();
+  const tbody = document.querySelector('#results tbody');
+  if(!tbody) return;
+  let r = 0;
+  for (const origIdx of order){
+    if (document.getElementById('hideDone').checked && matched.includes(origIdx)) continue;
+    const tr = tbody.children[r];
+    tr.children[1].textContent = ITEMS[origIdx].en;
+    r++;
+  }
+});
+
+// Wyczyść / reset
+document.getElementById('clearBtn').addEventListener('click', ()=>{
+  document.getElementById('answers').value = '';
+  matched = [];
+  order = ITEMS.map((_,i)=>i);
+  showAll = false;
+  document.getElementById('hideDone').checked = false;
+  render();
+});
+
+// input live-check
+document.getElementById('answers').addEventListener('input', ()=>{ showAll=false; autoCheck(); });
+
+// ukrywanie odgadniętych
 document.getElementById('hideDone').addEventListener('change', ()=>{ render(); });
 
+// init
 render();
 </script>
 </body>
